# my-claudia

./: .env.test.example  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: claudia-ui-review.md  gateway-connection-guide.md  plan-multi-agent-support.md  requirement.md  server-deployment.md  server-gateway-ui-guide.md  websocket-messages-analysis.md
e2e/: MODEL-TEST-RESULTS.md  QUICK_START.md  README.md  REORGANIZATION-PLAN.md  TEST-PLAN.md  verify-setup.sh  vitest.config.e2e.ts
e2e/archived/: ai-smoke.spec.ts  config-check.spec.ts  http-migration.spec.ts  socks5-proxy.spec.ts
e2e/docs/: TEST-REPORT.md
e2e/helpers/: ai-test-utils.ts  browser-adapter.ts  clean-json-openai-client.ts  connection.ts  custom-matchers.ts  modes.ts  performance.ts  setup.ts  test-factory.ts
e2e/setup/: global-setup.ts
e2e/tests/: GATEWAY-REQUEST-FORWARDING.md  MULTIPLE-GATEWAYS.md  (+24 more)
gateway/: .env.example  Dockerfile  docker-compose.yml  package.json  test-gateway.sh  test-wrong-secret.mjs  test-ws.mjs
scripts/: add-gateway-server.js  check-localStorage.html  diagnose-auth.js  generate-icons.cjs  regenerate-icons.mjs  setup-server.sh  test-gateway-e2e.sh  test-gateway-ws.js
server/: package.json  tsconfig.json  vitest.config.ts
shared/: package.json
(+263 files in other folders)
